--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,7 @@
 <section class="relative min-h-200 -md:h-[calc(100vh-71px)] md:h-[calc(100vh-86px)] flex flex-col justify-center items-center">
   <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="100px" y="100px" viewBox="0 0 256 256">
+      <title>Arrow pointing down icon.</title>
       <g>
         <g>
           <path class="group-hover:fill-pank transition-all duration-200" fill="#d1e4dd" d="M178.6,111.1V10H77.4v101.1H10v33.7h33.7v33.7h33.7v33.7h33.7V246h33.7v-33.7h33.7v-33.7h33.7v-33.7H246v-33.7H178.6z" />
@@ -9,9 +10,15 @@
     </svg>
   </a>
 
-  <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif" alt="A pixelated and cartoonized photo of Curtis" />
+  <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" />
 
-  <header class="typewriter relative -sm:bottom-[10vh] bottom-[15vh]">
-    <h1>Hi, I&apos;m Curtis. A web developer.</h1>
+  <header class="relative -sm:bottom-[10vh] bottom-[15vh]">
+    <span class="sr-only">Hi, I&apos;m Curtis. A web developer.</span>
+    <div class="typewriter mb-5">
+      <h1 class="overflow-x-hidden" aria-hidden="true">Hi, I&apos;m Curtis.</h1>
+    </div>
+    <div class="typewriter typewriter-delay">
+      <h1 id="second-line" class="opacity-0" aria-hidden="true">A web developer.</h1>
+    </div>
   </header>
 </section>
