--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -759,6 +759,10 @@ h5, .h5 {
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .whitespace-pre {
   white-space: pre;
 }
@@ -845,6 +849,10 @@ h5, .h5 {
   letter-spacing: 0.1em;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -924,13 +932,13 @@ body {
 
 :root {
   --bg-color: black;
-  --typewriterSpeed: 2s;
-  --typewriterCharacters: 31;
-  /*15, 32 */
+  --typewriterSpeed: 1.5s;
+  --typewriterCharacters: 15;
 }
 
 .typewriter {
-  font-family: "Courier New", monospace;
+  /* font-family: "Courier New", monospace; */
+  font-family: "Press Start 2P";
   color: #d1e4dd;
   display: flex;
   background: var(--bg-color);
@@ -941,7 +949,10 @@ body {
 .typewriter h1 {
   font-size: clamp(1.5rem, 2rem, 2rem);
   position: relative;
-  font-family: "Courier New", monospace;
+  /* font-family: "Courier New", monospace; */
+  font-family: "Press Start 2P";
+  white-space: pre-wrap;
+  /* Preserve line breaks */
   width: -moz-max-content;
   width: max-content;
 }
@@ -967,6 +978,20 @@ body {
   animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards, blink 750ms steps(15) infinite;
 }
 
+/* For multiple lines: */
+
+.typewriter.typewriter-delay h1::before {
+  /* add delay to the animation*/
+  animation: typewriter var(--typewriterSpeed) steps(16) 1s forwards;
+  animation-delay: 2.5s;
+}
+
+.typewriter.typewriter-delay h1::after {
+  /* add delay to the animation*/
+  animation: typewriter var(--typewriterSpeed) steps(16) 1s forwards, blink 750ms steps(15) infinite;
+  animation-delay: 2.5s;
+}
+
 @keyframes typewriter {
   to {
     left: 100%;
@@ -981,7 +1006,7 @@ body {
 
 @media (max-width: 767px) {
   .typewriter h1 {
-    font-size: calc(4.4vw - 1px);
+    font-size: 5.4vw;
   }
 }
 
@@ -1235,6 +1260,10 @@ body {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .-md\:flex-col {
+    flex-direction: column;
+  }
+
   .-md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
@@ -1254,6 +1283,14 @@ body {
     height: calc(100vh - 86px);
   }
 
+  .md\:w-2\/5 {
+    width: 40%;
+  }
+
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
   .md\:translate-y-1 {
     --tw-translate-y: 0.25rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1265,16 +1302,6 @@ body {
 
   .md\:tracking-\[9px\] {
     letter-spacing: 9px;
-  }
-}
-
-@media (max-width: 1219px) {
-  .-xl\:w-2\/5 {
-    width: 40%;
-  }
-
-  .-xl\:w-3\/5 {
-    width: 60%;
   }
 }
 
