--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -662,8 +662,8 @@ h5, .h5 {
   margin-right: auto;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-3\.5 {
@@ -698,6 +698,10 @@ h5, .h5 {
   margin-top: 0.375rem;
 }
 
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
 .flex {
   display: flex;
 }
@@ -724,6 +728,10 @@ h5, .h5 {
 
 .w-full {
   width: 100%;
+}
+
+.max-w-10 {
+  max-width: 2.5rem;
 }
 
 .max-w-400 {
@@ -873,13 +881,19 @@ h5, .h5 {
   src: url("../fonts/PressStart2P-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Share Tech";
+
+  src: url("../fonts/ShareTechMono-Regular.ttf") format("truetype");
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   background-color: black;
-  font-family: "Courier New", monospace;
+  font-family: "Share Tech";
   color: #d1e4dd;
 }
 
@@ -932,12 +946,11 @@ body {
 
 :root {
   --bg-color: black;
-  --typewriterSpeed: 1.5s;
+  --typewriterSpeed: 1s;
   --typewriterCharacters: 15;
 }
 
 .typewriter {
-  /* font-family: "Courier New", monospace; */
   font-family: "Press Start 2P";
   color: #d1e4dd;
   display: flex;
@@ -949,7 +962,6 @@ body {
 .typewriter h1 {
   font-size: clamp(1.5rem, 2rem, 2rem);
   position: relative;
-  /* font-family: "Courier New", monospace; */
   font-family: "Press Start 2P";
   white-space: pre-wrap;
   /* Preserve line breaks */
@@ -969,13 +981,13 @@ body {
 
 .typewriter h1::before {
   background: var(--bg-color);
-  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
+  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 0.5s forwards;
 }
 
 .typewriter h1::after {
   width: 0.125em;
   background: #d1e4dd;
-  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards, blink 750ms steps(15) infinite;
+  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 0.5s forwards, blink 750ms steps(15) infinite;
 }
 
 /* For multiple lines: */
@@ -983,13 +995,13 @@ body {
 .typewriter.typewriter-delay h1::before {
   /* add delay to the animation*/
   animation: typewriter var(--typewriterSpeed) steps(16) 1s forwards;
-  animation-delay: 2.5s;
+  animation-delay: 1.5s;
 }
 
 .typewriter.typewriter-delay h1::after {
   /* add delay to the animation*/
   animation: typewriter var(--typewriterSpeed) steps(16) 1s forwards, blink 750ms steps(15) infinite;
-  animation-delay: 2.5s;
+  animation-delay: 1.5s;
 }
 
 @keyframes typewriter {
@@ -1146,10 +1158,12 @@ body {
   clip-path: polygon(0px calc(100% - 16px), 4px calc(100% - 16px), 4px calc(100% - 8px), 8px calc(100% - 8px), 8px calc(100% - 4px), 16px calc(100% - 4px), 16px 100%, calc(100% - 16px) 100%, calc(100% - 16px) calc(100% - 4px), calc(100% - 8px) calc(100% - 4px), calc(100% - 8px) calc(100% - 8px), calc(100% - 4px) calc(100% - 8px), calc(100% - 4px) calc(100% - 16px), 100% calc(100% - 16px), 100% 16px, calc(100% - 4px) 16px, calc(100% - 4px) 8px, calc(100% - 8px) 8px, calc(100% - 8px) 4px, calc(100% - 16px) 4px, calc(100% - 16px) 0px, 16px 0px, 16px 4px, 8px 4px, 8px 8px, 4px 8px, 4px 16px, 0px 16px);
 }
 
-/* Alternate image and content order in projects section */
+/* Alternate image and content order in projects section, but not on mobile widths */
 
-.project:nth-child(odd) > div:first-child {
-  order: 2;
+@media (min-width: 768px) {
+  .project:nth-child(odd) > div:first-child {
+    order: 2;
+  }
 }
 
 .marquee {
@@ -1236,6 +1250,16 @@ body {
   .-sm\:bottom-\[10vh\] {
     bottom: 10vh;
   }
+
+  .-sm\:hidden {
+    display: none;
+  }
+}
+
+@media (min-width: 600px) {
+  .sm\:hidden {
+    display: none;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1243,8 +1267,41 @@ body {
     right: 1.5rem;
   }
 
+  .-md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .-md\:mr-5 {
     margin-right: 1.25rem;
+  }
+
+  .-md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .-md\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
+  .-md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .-md\:mb-2\.5 {
+    margin-bottom: 0.625rem;
+  }
+
+  .-md\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .-md\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .-md\:hidden {
+    display: none;
   }
 
   .-md\:h-\[calc\(100vh-71px\)\] {
@@ -1253,6 +1310,10 @@ body {
 
   .-md\:max-w-28 {
     max-width: 7rem;
+  }
+
+  .-md\:max-w-lg {
+    max-width: 32rem;
   }
 
   .-md\:translate-x-0\.5 {
@@ -1277,6 +1338,10 @@ body {
 @media (min-width: 768px) {
   .md\:mb-40 {
     margin-bottom: 10rem;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-\[calc\(100vh-86px\)\] {
@@ -1305,8 +1370,8 @@ body {
   }
 }
 
-@media (min-width: 1220px) {
-  .xl\:w-1\/2 {
+@media (min-width: 1024px) {
+  .lg\:w-1\/2 {
     width: 50%;
   }
 }
