--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -662,12 +662,12 @@ h5, .h5 {
   margin-right: auto;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
 .mb-3\.5 {
   margin-bottom: 0.875rem;
+}
+
+.mb-40 {
+  margin-bottom: 10rem;
 }
 
 .mb-5 {
@@ -698,8 +698,12 @@ h5, .h5 {
   margin-top: 0.375rem;
 }
 
-.mb-40 {
-  margin-bottom: 10rem;
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .flex {
@@ -873,6 +877,10 @@ h5, .h5 {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 @font-face {
@@ -1246,6 +1254,10 @@ body {
   color: rgb(239 126 247 / var(--tw-text-opacity, 1));
 }
 
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
+}
+
 @media (max-width: 599px) {
   .-sm\:bottom-\[10vh\] {
     bottom: 10vh;
@@ -1272,32 +1284,24 @@ body {
     margin-right: auto;
   }
 
-  .-md\:mr-5 {
-    margin-right: 1.25rem;
-  }
-
-  .-md\:mb-3 {
-    margin-bottom: 0.75rem;
-  }
-
-  .-md\:mb-28 {
-    margin-bottom: 7rem;
+  .-md\:mb-2\.5 {
+    margin-bottom: 0.625rem;
   }
 
   .-md\:mb-20 {
     margin-bottom: 5rem;
   }
 
-  .-md\:mb-2\.5 {
-    margin-bottom: 0.625rem;
-  }
-
-  .-md\:mb-4 {
-    margin-bottom: 1rem;
+  .-md\:mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .-md\:mb-5 {
     margin-bottom: 1.25rem;
+  }
+
+  .-md\:mr-5 {
+    margin-right: 1.25rem;
   }
 
   .-md\:hidden {
