new favicon and logo hover colors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% if page.meta_title %}{{ page.meta_title }} | {% endif %}Princeps Tech LLC</title>
+    <title>{% if page.meta_title %}{{ page.meta_title }}{% endif %}</title>
     <meta name="description" content="{{ page.meta_description }}" />
 
     <link rel="stylesheet" href="/assets/css/styles.css" />
