--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -649,12 +649,108 @@ h5, .h5 {
   top: 0px;
 }
 
+.-left-\[200px\] {
+  left: -200px;
+}
+
+.-top-\[200px\] {
+  top: -200px;
+}
+
+.-top-\[252px\] {
+  top: -252px;
+}
+
+.-top-\[280px\] {
+  top: -280px;
+}
+
+.-top-\[440px\] {
+  top: -440px;
+}
+
+.left-\[100px\] {
+  left: 100px;
+}
+
+.left-\[240px\] {
+  left: 240px;
+}
+
+.left-\[960px\] {
+  left: 960px;
+}
+
+.bottom-\[200px\] {
+  bottom: 200px;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+
+.bottom-\[0px\] {
+  bottom: 0px;
+}
+
+.-bottom-\[252px\] {
+  bottom: -252px;
+}
+
+.-bottom-\[200px\] {
+  bottom: -200px;
+}
+
+.-bottom-\[440px\] {
+  bottom: -440px;
+}
+
+.-bottom-\[280px\] {
+  bottom: -280px;
+}
+
+.-bottom-\[152px\] {
+  bottom: -152px;
+}
+
+.left-\[340px\] {
+  left: 340px;
+}
+
+.-bottom-\[340px\] {
+  bottom: -340px;
+}
+
+.-bottom-\[640px\] {
+  bottom: -640px;
+}
+
+.-bottom-\[540px\] {
+  bottom: -540px;
+}
+
+.-bottom-\[180px\] {
+  bottom: -180px;
+}
+
+.-bottom-\[380px\] {
+  bottom: -380px;
+}
+
 .z-0 {
   z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-0 {
+  z-index: 0;
 }
 
 .mx-auto {
@@ -718,6 +814,26 @@ h5, .h5 {
   height: 100%;
 }
 
+.h-\[267px\] {
+  height: 267px;
+}
+
+.h-\[276px\] {
+  height: 276px;
+}
+
+.h-\[388px\] {
+  height: 388px;
+}
+
+.h-\[492px\] {
+  height: 492px;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-200 {
   min-height: 50rem;
 }
@@ -730,12 +846,58 @@ h5, .h5 {
   width: 100%;
 }
 
+.w-\[1192px\] {
+  width: 1192px;
+}
+
+.w-\[1758px\] {
+  width: 1758px;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
 .max-w-400 {
   max-width: 100rem;
 }
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-full {
+  max-width: 100%;
+}
+
+.rotate-\[-20deg\] {
+  --tw-rotate: -20deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-32deg\] {
+  --tw-rotate: -32deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[40deg\] {
+  --tw-rotate: 40deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[20deg\] {
+  --tw-rotate: 20deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[32deg\] {
+  --tw-rotate: 32deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-40deg\] {
+  --tw-rotate: -40deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -764,6 +926,10 @@ h5, .h5 {
 
 .whitespace-pre {
   white-space: pre;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .bg-gradient-to-l {
@@ -842,6 +1008,27 @@ h5, .h5 {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.opacity-75 {
+  opacity: 0.75;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+.blur-\[48px\] {
+  --tw-blur: blur(48px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
@@ -1214,6 +1401,11 @@ body {
   }
 }
 
+.ray-light {
+  background-color: #3166b480;
+  background: radial-gradient(ellipse closest-side at center, #83dd9e, #3166b480);
+}
+
 .hover\:text-pank:hover {
   --tw-text-opacity: 1;
   color: rgb(239 126 247 / var(--tw-text-opacity, 1));
@@ -1328,6 +1520,10 @@ body {
 
   .md\:w-3\/5 {
     width: 60%;
+  }
+
+  .md\:opacity-40 {
+    opacity: 0.4;
   }
 }
 
