--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,13 @@
     <link rel="icon" href="/assets/images/favicon.ico" />
   </head>
   <body class="relative">
-    <div aria-hidden="true" class="absolute -z-10 h-screen w-screen max-w-full overflow-hidden min-[2048px]:max-w-[2048px]">
-      <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[20deg] opacity-100 md:opacity-40 -bottom-[252px] left-[100px]"></div>
-      <div class="absolute rounded-full blur-[48px] ray-light h-[276px] w-[1192px] rotate-[32deg] opacity-25 -bottom-[200px] left-[240px]"></div>
-      <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-40deg] opacity-80 -left-[200px] -bottom-[440px]"></div>
-      <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-75 -bottom-[280px] left-[960px]"></div>
+    <div aria-hidden="true" class="sticky inset-0">
+      <div class="absolute -z-10 h-screen w-screen max-w-full overflow-hidden min-[2048px]:max-w-[2048px]">
+        <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[20deg] opacity-40 -bottom-[252px] left-[100px] scroll-fade"></div>
+        <div class="absolute rounded-full blur-[48px] ray-light h-[276px] w-[1192px] rotate-[32deg] opacity-25 -bottom-[200px] left-[240px] scroll-fade"></div>
+        <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-40deg] opacity-80 -left-[200px] -bottom-[440px] scroll-fade"></div>
+        <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-75 -bottom-[280px] left-[960px] scroll-fade"></div>
+      </div>
     </div>
     {% include navbar.html %} {% include hero.html %}
     <main>
