--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,11 @@
-<section class="relative min-h-200 -md:h-[calc(100vh-71px)] md:h-[calc(100vh-86px)] flex flex-col justify-center items-center">
+<section class="relative md:min-h-200 -md:h-[calc(100vh-64px)] md:h-[calc(100vh-68px)] flex flex-col justify-center items-center">
+  <div aria-hidden="true" class="pointer-events-none absolute -sm:-top-16 -top-[68px] z-50 h-screen w-screen max-w-full overflow-hidden min-[2048px]:max-w-[2048px]">
+    <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[-20deg] opacity-20 -top-[300px] left-[100px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[276px] w-[1192px] rotate-[32deg] opacity-20 -top-[260px] left-[240px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-30deg] opacity-20 -left-[260px] -top-[500px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-20 -top-[300px] left-[960px]"></div>
+  </div>
+
   <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="100px" y="100px" viewBox="0 0 256 256">
       <title>Arrow pointing down icon.</title>
