hero mobile responsive

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
     <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-20 -md:-top-[300px] -top-[300px] left-[960px]"></div>
   </div>
 
-  <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
+  <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 -md:bottom-6 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="100px" y="100px" viewBox="0 0 256 256">
       <title>Arrow pointing down icon.</title>
       <g>
@@ -17,15 +17,17 @@
     </svg>
   </a>
 
-  <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" />
+  <div class="relative mx-auto -z-10">
+    <img id="pixel-curtis" class="mx-auto" src="/assets/images/curtis.gif?" alt="A pixelated and cartoonized photo of Curtis" />
 
-  <header class="relative -sm:bottom-[10vh] bottom-[15vh]">
-    <span class="sr-only">Hi, I&apos;m Curtis. A web developer.</span>
-    <div class="typewriter mb-5">
-      <h1 class="overflow-x-hidden" aria-hidden="true">Hi, I&apos;m Curtis.</h1>
-    </div>
-    <div class="typewriter typewriter-delay">
-      <h1 id="second-line" class="opacity-0" aria-hidden="true">A web developer.</h1>
-    </div>
-  </header>
+    <header class="relative bottom-[20%]">
+      <span class="sr-only">Hi, I&apos;m Curtis. A web developer.</span>
+      <div class="typewriter mb-5">
+        <h1 class="overflow-x-hidden" aria-hidden="true">Hi, I&apos;m Curtis.</h1>
+      </div>
+      <div class="typewriter typewriter-delay">
+        <h1 id="second-line" class="opacity-0" aria-hidden="true">A web developer.</h1>
+      </div>
+    </header>
+  </div>
 </section>
