--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,15 +199,15 @@ body {
 
 /* Floating effect */
 .floating {
-  animation: float 2s ease-in-out infinite;
+  animation: floating 2s ease-in-out infinite;
 }
-@keyframes float {
+@keyframes floating {
   0% {
     transform: translateY(0);
   }
 
   50% {
-    transform: translateY(-20px);
+    transform: translateY(-12px);
   }
 
   100% {
