--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1447,6 +1447,18 @@ body {
     right: 1.5rem;
   }
 
+  .-md\:bottom-10 {
+    bottom: 2.5rem;
+  }
+
+  .-md\:bottom-20 {
+    bottom: 5rem;
+  }
+
+  .-md\:bottom-16 {
+    bottom: 4rem;
+  }
+
   .-md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
