--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -7,7 +7,7 @@
   {% for project in page.projects %}
   <article class="step project flex -md:flex-col -md:mb-20 mb-40">
     {% if project.title %}
-    <h2 class="substep mb-5 mx-auto text-center md:hidden">{{project.title}}</h2>
+    <h2 class="mb-5 mx-auto text-center md:hidden">{{project.title}}</h2>
     {% endif %}
     <div class="-md:max-w-lg -md:mx-auto -md:mb-3 w-full md:w-2/5 lg:w-1/2 relative overflow-hidden pixel-corners aspect-[5/3]">
       <img class="zooms absolute w-full h-full z-0 inset-0 object-cover" src="{{project.image}}" alt="Screenshot of the {{project.title}} website." />
