adjust hero haze responsive

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,5 +1,5 @@
-<section id="showcase" class="flex flex-col max-w-400 mx-auto pt-40 -md:px-3 px-6">
-  <header class="step flex flex-col justify-center items-center md:mb-40">
+<section id="showcase" class="flex flex-col max-w-400 mx-auto -md:pt-20 pt-40 -md:px-3 px-6">
+  <header class="step flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
     <h1 class="shinebig mb-7">Showcase</h1>
     <p class="substep animation__delay-short">I build websites and web apps. I have an eye for detail, I&apos;m proud to showcase</p>
   </header>
