--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1467,6 +1467,22 @@ body {
     left: -60px;
   }
 
+  .-md\:-left-\[465px\] {
+    left: -465px;
+  }
+
+  .-md\:-top-\[350px\] {
+    top: -350px;
+  }
+
+  .-md\:left-\[150px\] {
+    left: 150px;
+  }
+
+  .-md\:left-\[200px\] {
+    left: 200px;
+  }
+
   .-md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1511,6 +1527,10 @@ body {
   .-md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+
+  .-md\:pt-20 {
+    padding-top: 5rem;
   }
 
   .-md\:text-\[12px\] {
