add negative top-margin against top-padding for internal link scroll position

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,4 +1,4 @@
-<section id="showcase" class="flex flex-col max-w-400 mx-auto -md:pt-20 pt-40 -md:px-3 px-6">
+<section id="showcase" class="flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
     <h1 class="shinebig mb-7">Showcase</h1>
     <p class="substep animation__delay-short">I build websites and web apps. I have an eye for detail, I&apos;m proud to showcase</p>
