edit project header copy. rebuild css

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
         <a class="shine hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#showcase"> Showcase </a>
       </li>
       <li role="menuitem" class="self-start mt-1.5">
-        <a class="match hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#kicker"> About<span class="blinker">_</span> </a>
+        <a class="match hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#about"> About<span class="blinker">_</span> </a>
       </li>
     </ul>
   </nav>
