--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,7 +1,11 @@
 <section id="showcase" class="flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
-  <header class="step flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
+  <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
     <h1 class="shinebig mb-7">Showcase</h1>
-    <p class="substep animation__delay-short">I build websites and web apps. I have an eye for detail, I&apos;m proud to showcase</p>
+    <p class="max-w-3xl substep animation__delay-short">
+      I building web sites and web apps.<br /><br />
+      Each project represents triumphs of functionality, hard lessons learned, relationships built, and a couple of new patterns or tools for my back pocket.<br /><br />
+      I'm proud to showcase these select recent works.
+    </p>
   </header>
 
   {% for project in page.projects %}
