--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -722,12 +722,20 @@ h5, .h5 {
   margin-right: auto;
 }
 
+.-mt-40 {
+  margin-top: -10rem;
+}
+
 .mb-3\.5 {
   margin-bottom: 0.875rem;
 }
 
 .mb-40 {
   margin-bottom: 10rem;
+}
+
+.mb-44 {
+  margin-bottom: 11rem;
 }
 
 .mb-5 {
@@ -760,18 +768,6 @@ h5, .h5 {
 
 .mt-1\.5 {
   margin-top: 0.375rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.-mt-0 {
-  margin-top: -0px;
-}
-
-.-mt-40 {
-  margin-top: -10rem;
 }
 
 .flex {
@@ -828,6 +824,10 @@ h5, .h5 {
 
 .w-screen {
   width: 100vw;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .max-w-400 {
@@ -948,10 +948,6 @@ h5, .h5 {
 
 .pt-1\.5 {
   padding-top: 0.375rem;
-}
-
-.pt-40 {
-  padding-top: 10rem;
 }
 
 .pt-80 {
@@ -1439,8 +1435,8 @@ body {
 }
 
 @media (max-width: 767px) {
-  .-md\:-left-\[260px\] {
-    left: -260px;
+  .-md\:-left-\[465px\] {
+    left: -465px;
   }
 
   .-md\:-top-\[260px\] {
@@ -1455,53 +1451,25 @@ body {
     top: -400px;
   }
 
-  .-md\:bottom-6 {
-    bottom: 1.5rem;
-  }
-
-  .-md\:right-6 {
-    right: 1.5rem;
-  }
-
-  .-md\:bottom-10 {
-    bottom: 2.5rem;
-  }
-
-  .-md\:bottom-20 {
-    bottom: 5rem;
-  }
-
   .-md\:bottom-16 {
     bottom: 4rem;
-  }
-
-  .-md\:-left-\[365px\] {
-    left: -365px;
-  }
-
-  .-md\:-left-\[60px\] {
-    left: -60px;
-  }
-
-  .-md\:-left-\[465px\] {
-    left: -465px;
-  }
-
-  .-md\:-top-\[350px\] {
-    top: -350px;
-  }
-
-  .-md\:left-\[150px\] {
-    left: 150px;
   }
 
   .-md\:left-\[200px\] {
     left: 200px;
   }
 
+  .-md\:right-6 {
+    right: 1.5rem;
+  }
+
   .-md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .-md\:-mt-20 {
+    margin-top: -5rem;
   }
 
   .-md\:mb-2\.5 {
@@ -1522,18 +1490,6 @@ body {
 
   .-md\:mr-5 {
     margin-right: 1.25rem;
-  }
-
-  .-md\:mt-20 {
-    margin-top: 5rem;
-  }
-
-  .-md\:-mt-0 {
-    margin-top: -0px;
-  }
-
-  .-md\:-mt-20 {
-    margin-top: -5rem;
   }
 
   .-md\:hidden {
@@ -1557,10 +1513,6 @@ body {
     padding-right: 0.75rem;
   }
 
-  .-md\:pt-20 {
-    padding-top: 5rem;
-  }
-
   .-md\:pt-40 {
     padding-top: 10rem;
   }
@@ -1571,10 +1523,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:mb-40 {
-    margin-bottom: 10rem;
-  }
-
   .md\:hidden {
     display: none;
   }
