include about and footer sections

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,334 +18,11 @@
         <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-75 -bottom-[300px] left-[960px] scroll-fade"></div>
       </div>
     </div>
-    {% include navbar.html %} {% include hero.html %}
-    <main>
-      {% include showcase.html %}
-      <div id="kicker">
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST v MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        <br />
-        TEST TEST TEST TEST TEST MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        <br />
-        TEST TEST TEST TEST TEST MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        <br />
-        TEST TEST TEST TEST TEST MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST
-        <br />
-        MYSITE XX
-        <br />
-        MYSITE XX <br />
-        TEST TEST TEST TEST TEST
-        <br />
-      </div>
-    </main>
 
-    <!-- <script src="/assets/js/script.js"></script> -->
+    {% include navbar.html %} {% include hero.html %}
+    <main>{% include showcase.html %} {% include about.html %}</main>
+    {% include footer.html %}
+
     <script type="module" src="/assets/js/dist/script.js"></script>
   </body>
 </html>
