--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,15 +1,14 @@
-<section id="showcase" class="flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
+<section id="showcase" class="list-group flex flex-col max-w-400 mx-auto -md:px-3 px-6 -md:pt-40 pt-80 -md:-mt-20 -mt-40">
   <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
     <h1 class="shinebig mb-7">Showcase</h1>
     <p class="max-w-3xl substep animation__delay-short">
-      I love building web sites and web apps.<br /><br />
-      Each project represents triumphs of functionality, hard lessons learned, relationships built, and a couple of new patterns or tools for my back pocket.<br /><br />
+      Each project represents a unique journey. In triumphs of functionality, hard lessons learned, relationships built, and a couple of new patterns or tools for my back pocket.<br /><br />
       I'm proud to showcase these select recent works.
     </p>
   </header>
 
   {% for project in page.projects %}
-  <article class="step project flex -md:flex-col -md:mb-20 mb-40">
+  <article class="step project flex -md:flex-col -md:mb-20 mb-40 {% if forloop.index > 3 %}hidden{% endif %}">
     {% if project.title %}
     <h2 class="mb-5 mx-auto text-center md:hidden">{{project.title}}</h2>
     {% endif %}
@@ -50,4 +49,5 @@
     </div>
   </article>
   {% endfor %}
+  <button id="loadMoreProjects" class="bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black -md:mt-10 -mt-20">View More Projects</button>
 </section>
