--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,9 +1,9 @@
 <section class="relative md:min-h-200 -md:h-[calc(100vh-64px)] md:h-[calc(100vh-68px)] flex flex-col justify-center items-center">
-  <div aria-hidden="true" class="pointer-events-none absolute -sm:-top-16 -top-[68px] z-50 h-screen w-screen max-w-full overflow-hidden min-[2048px]:max-w-[2048px]">
-    <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[-20deg] opacity-20 -md:-top-[400px] -top-[300px] -md:left-[200px] left-[100px]"></div>
+  <div aria-hidden="true" class="pointer-events-none absolute -sm:-top-16 -top-[68px] z-50 h-screen w-screen max-w-full overflow-hidden">
+    <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[-20deg] opacity-20 -md:-top-[400px] -top-[300px] -md:left-[200px] -left-[200px]"></div>
     <div class="absolute rounded-full blur-[48px] ray-light h-[276px] w-[1192px] rotate-[32deg] opacity-20 -md:-top-[260px] -top-[260px] left-[240px]"></div>
-    <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-30deg] opacity-20 -md:-left-[465px] -left-[260px] -top-[500px]"></div>
-    <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-20 -md:-top-[300px] -top-[300px] left-[960px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-30deg] opacity-20 -md:-left-[465px] -top-[500px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-20 -md:-top-[300px] -top-[300px] -xl:left-[960px] left-[1200px]"></div>
   </div>
 
   <a class="absolute z-0 w-8 h-8 -md:right-6 right-20 -md:bottom-16 bottom-20 group floating" href="#showcase" role="link" aria-label="Skip to main content">
