--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -637,12 +637,12 @@ h5, .h5 {
   bottom: -440px;
 }
 
-.-left-\[240px\] {
-  left: -240px;
+.-left-\[200px\] {
+  left: -200px;
 }
 
-.-left-\[260px\] {
-  left: -260px;
+.-left-\[240px\] {
+  left: -240px;
 }
 
 .-top-\[260px\] {
@@ -679,6 +679,10 @@ h5, .h5 {
 
 .left-\[100px\] {
   left: 100px;
+}
+
+.left-\[1200px\] {
+  left: 1200px;
 }
 
 .left-\[240px\] {
@@ -720,6 +724,10 @@ h5, .h5 {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.-mt-20 {
+  margin-top: -5rem;
 }
 
 .-mt-40 {
@@ -770,6 +778,10 @@ h5, .h5 {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .aspect-\[5\/3\] {
   aspect-ratio: 5/3;
 }
@@ -814,6 +826,11 @@ h5, .h5 {
   width: 1758px;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -836,14 +853,6 @@ h5, .h5 {
 
 .max-w-lg {
   max-width: 32rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 .rotate-\[-20deg\] {
@@ -908,6 +917,11 @@ h5, .h5 {
   border-radius: 9999px;
 }
 
+.bg-base {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 228 221 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gradient-to-l {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
@@ -950,8 +964,16 @@ h5, .h5 {
   padding-bottom: 0.25rem;
 }
 
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
+}
+
 .pt-1\.5 {
   padding-top: 0.375rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pt-80 {
@@ -980,6 +1002,11 @@ h5, .h5 {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0 {
@@ -1399,6 +1426,11 @@ body {
   opacity: 1;
 }
 
+.hover\:bg-pank:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 126 247 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-pank:hover {
   --tw-text-opacity: 1;
   color: rgb(239 126 247 / var(--tw-text-opacity, 1));
@@ -1496,6 +1528,10 @@ body {
     margin-right: 1.25rem;
   }
 
+  .-md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .-md\:hidden {
     display: none;
   }
@@ -1551,5 +1587,11 @@ body {
 @media (min-width: 1024px) {
   .lg\:w-1\/2 {
     width: 50%;
+  }
+}
+
+@media (max-width: 1219px) {
+  .-xl\:left-\[960px\] {
+    left: 960px;
   }
 }
