--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <section class="relative md:min-h-200 -md:h-[calc(100vh-64px)] md:h-[calc(100vh-68px)] flex flex-col justify-center items-center">
   <div aria-hidden="true" class="pointer-events-none absolute -sm:-top-16 -top-[68px] z-50 h-screen w-screen max-w-full overflow-hidden">
-    <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[-20deg] opacity-20 -md:-top-[400px] -top-[300px] -md:left-[200px] -left-[200px]"></div>
+    <div class="absolute rounded-full blur-[48px] ray-light h-[267px] w-[1192px] rotate-[-20deg] md:rotate-[-40deg] opacity-20 -md:-top-[400px] -top-[300px] -md:left-[200px] -left-[200px]"></div>
     <div class="absolute rounded-full blur-[48px] ray-light h-[276px] w-[1192px] rotate-[32deg] opacity-20 -md:-top-[260px] -top-[260px] left-[240px]"></div>
     <div class="absolute rounded-full blur-[48px] ray-light h-[388px] w-[1758px] rotate-[-30deg] opacity-20 -md:-left-[465px] -top-[500px]"></div>
     <div class="absolute rounded-full blur-[48px] ray-light h-[492px] w-[1192px] rotate-[-32deg] opacity-20 -md:-top-[300px] -top-[300px] -xl:left-[960px] left-[1200px]"></div>
