--- a/_layouts/xdefault.html
+++ b/_layouts/xdefault.html
@@ -20,7 +20,7 @@
     </div>
 
     {% include navbar.html %} {% include hero.html %}
-    <main>{% include showcase.html %} {% include about.html %}</main>
+    <main>{% include showcase.html %} {% include about.html %} {% include kicker.html %}</main>
     {% include footer.html %}
 
     <script type="module" src="/assets/js/dist/script.js"></script>
