--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -575,21 +575,19 @@ h2, .h2 {
 h3, .h3 {
   font-family: "Press Start 2P";
   font-weight: 500;
-  font-size: clamp(1.75rem, 3.4375vw, 2.75rem);
+  font-size: clamp(1.25rem, 2.5vw, 2rem);
   line-height: 1.2;
 }
 
 h4, .h4 {
   font-family: "Press Start 2P";
   font-weight: 400;
-  font-size: clamp(1.25rem, 1.875vw, 1.5rem);
   line-height: 1.2;
 }
 
 h5, .h5 {
   font-family: "Press Start 2P";
   font-weight: 700;
-  font-size: clamp(1.25rem, 1.875vw, 1.5rem);
   line-height: 1.2;
 }
 
@@ -726,12 +724,16 @@ h5, .h5 {
   margin-right: auto;
 }
 
-.-mt-20 {
-  margin-top: -5rem;
-}
-
 .-mt-40 {
   margin-top: -10rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-3\.5 {
@@ -772,6 +774,18 @@ h5, .h5 {
 
 .mt-1\.5 {
   margin-top: 0.375rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .flex {
@@ -853,6 +867,10 @@ h5, .h5 {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .rotate-\[-20deg\] {
@@ -945,6 +963,10 @@ h5, .h5 {
      object-fit: cover;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -958,6 +980,11 @@ h5, .h5 {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pb-1 {
@@ -1526,10 +1553,6 @@ body {
 
   .-md\:mr-5 {
     margin-right: 1.25rem;
-  }
-
-  .-md\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .-md\:hidden {
