add contact link to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,8 +15,17 @@
       <li role="menuitem" class="self-start ml-auto -md:mr-5 mr-16 mt-1.5">
         <a class="shine hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#showcase"> Showcase </a>
       </li>
-      <li role="menuitem" class="self-start mt-1.5">
+      <li role="menuitem" class="self-start mt-1.5 mr-12 -md:mr-2.5">
         <a class="match hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#about"> About<span class="blinker">_</span> </a>
+      </li>
+      <li role="menuitem" class="self-start mt-1.5 -md:translate-y-2.5 translate-y-1.5">
+        <a class="" href="#contact">
+          <span class="sr-only">Contact</span>
+          <svg class="group mt-[-11px] -md:max-w-8" width="40px" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0.0 0.0 110.0 135.0">
+            <title>Icon titled "Envelope pixel" by Donchu from https://thenounproject.com/browse/icons/term/envelope-pixel/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
+            <path class="transition-all duration-500 group-hover:fill-pank" fill="#d1e4dd" d="m6.9648 83.094v-3.0742h-6.1484v-61.477h6.1484v-6.1484h86.07v6.1484h6.1484v61.477h-6.1484v6.1484h-86.07zm86.066-9.2227v-6.1484h-6.1484v-6.1484h6.1484v-36.883h-6.1484v-6.1484h-73.77v6.1484h-6.1484v36.883h6.1484v6.1484h-6.1484v12.297h86.07zm-79.918-15.371v-3.0742h12.297v-6.1484h6.1484v-6.1484h-6.1484v-6.1484h-6.1484v-6.1484l-3.0742 0.007813h-3.0742v-6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h6.1484v6.1484h12.297v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v-6.1484h6.1484v6.1484h-6.1484v6.1484h-6.1484v6.1484h-6.1484v6.1484h6.1484v6.1484h12.297v6.1484h-12.297v-6.1484h-6.1484v-6.1484h-6.1484v6.1484h-6.1484v6.1484h-12.297v-6.1484h-6.1484v-6.1484h-6.1484v6.1484h-6.1484v6.1484l-6.1484-0.003906h-6.1484z" />
+          </svg>
+        </a>
       </li>
     </ul>
   </nav>
