better project section copy

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -2,7 +2,7 @@
   <header class="step max-auto flex flex-col justify-center items-center -md:mb-20 mb-40 text-center">
     <h1 class="shinebig mb-7">Showcase</h1>
     <p class="max-w-3xl substep animation__delay-short">
-      Each project represents a journey. Relationships forged, deploy pipelines broken, and deadlines met. Always walking away with new patterns and tools to keep in the back pocket.<br /><br />
+      Each project is a unique journey; Relationships forged, deploy pipelines broken, deadlines met, a couple of new patterns or tools for my back pocket.<br /><br />
       I'm proud to showcase these select recent works.
     </p>
   </header>
