--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
         <a class="match hover:text-pank -md:text-[12px] font-playertwo transition-text duration-500" href="#about"> About<span class="blinker">_</span> </a>
       </li>
       <li role="menuitem" class="self-start mt-1.5 -md:translate-y-2.5 translate-y-1.5">
-        <a class="" href="#contact">
+        <a href="#contact">
           <span class="sr-only">Contact</span>
           <svg class="group mt-[-11px] -md:max-w-8" width="40px" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0.0 0.0 110.0 135.0">
             <title>Icon titled "Envelope pixel" by Donchu from https://thenounproject.com/browse/icons/term/envelope-pixel/. CC BY 3.0 https://creativecommons.org/licenses/by/3.0/</title>
